new sources, small fixes

--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -344,6 +344,23 @@
   file = {/home/ro/Zotero/storage/MGUXM4UG/Essamlali et al. - 2023 - Bile Duct Segmentation Methods Under 3D Slicer App.pdf}
 }
 
+@article{fedorov3DSlicerImage2012,
+  title = {{{3D Slicer}} as an Image Computing Platform for the {{Quantitative Imaging Network}}},
+  author = {Fedorov, Andriy and Beichel, Reinhard and Kalpathy-Cramer, Jayashree and Finet, Julien and Fillion-Robin, Jean-Christophe and Pujol, Sonia and Bauer, Christian and Jennings, Dominique and Fennessy, Fiona and Sonka, Milan and Buatti, John and Aylward, Stephen and Miller, James V. and Pieper, Steve and Kikinis, Ron},
+  date = {2012-11},
+  journaltitle = {Magnetic Resonance Imaging},
+  shortjournal = {Magnetic Resonance Imaging},
+  volume = {30},
+  number = {9},
+  pages = {1323--1341},
+  issn = {0730725X},
+  doi = {10.1016/j.mri.2012.05.001},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0730725X12001816},
+  urldate = {2024-02-08},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/FEYYW9LG/Fedorov et al. - 2012 - 3D Slicer as an image computing platform for the Q.pdf}
+}
+
 @article{fishmanVolumeRenderingMaximum2006,
   title = {Volume {{Rendering}} versus {{Maximum Intensity Projection}} in {{CT Angiography}}: {{What Works Best}}, {{When}}, and {{Why}}},
   shorttitle = {Volume {{Rendering}} versus {{Maximum Intensity Projection}} in {{CT Angiography}}},
@@ -713,6 +730,21 @@
   keywords = {Lung cancer,Lymphopenia,Proton beam therapy,Radiation therapy}
 }
 
+@article{korfiatisIndependentActiveContours2017,
+  title = {An {{Independent Active Contours Segmentation}} Framework for Bone Micro-{{CT}} Images},
+  author = {Korfiatis, Vasileios Ch. and Tassani, Simone and Matsopoulos, George K.},
+  date = {2017-08},
+  journaltitle = {Computers in Biology and Medicine},
+  shortjournal = {Computers in Biology and Medicine},
+  volume = {87},
+  pages = {358--370},
+  issn = {00104825},
+  doi = {10.1016/j.compbiomed.2017.06.016},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0010482517301804},
+  urldate = {2024-02-08},
+  langid = {english}
+}
+
 @article{kotheImpactOrganMotion2022,
   title = {The Impact of Organ Motion and the Appliance of Mitigation Strategies on the Effectiveness of Hypoxia-Guided Proton Therapy for Non-Small Cell Lung Cancer},
   author = {Köthe, Andreas and Lomax, Antony John and Giovannelli, Anna Chiara and Safai, Sairos and Bizzocchi, Nicola and Roelofs, Erik and Even, Aniek J.G. and Weber, Damien Charles and Fattori, Giovanni},
@@ -944,6 +976,24 @@
   abstract = {Background               With the rise of mobile medicine, the development of new technologies such as smart sensing, and the popularization of personalized health concepts, the field of smart wearable devices has developed rapidly in recent years. Among them, medical wearable devices have become one of the most promising fields. These intelligent devices not only assist people in pursuing a healthier lifestyle but also provide a constant stream of health care data for disease diagnosis and treatment by actively recording physiological parameters and tracking metabolic status. Therefore, wearable medical devices have the potential to become a mainstay of the future mobile medical market.                                         Objective               Although previous reviews have discussed consumer trends in wearable electronics and the application of wearable technology in recreational and sporting activities, data on broad clinical usefulness are lacking. We aimed to review the current application of wearable devices in health care while highlighting shortcomings for further research. In addition to daily health and safety monitoring, the focus of our work was mainly on the use of wearable devices in clinical practice.                                         Methods               We conducted a narrative review of the use of wearable devices in health care settings by searching papers in PubMed, EMBASE, Scopus, and the Cochrane Library published since October 2015. Potentially relevant papers were then compared to determine their relevance and reviewed independently for inclusion.                                         Results               A total of 82 relevant papers drawn from 960 papers on the subject of wearable devices in health care settings were qualitatively analyzed, and the information was synthesized. Our review shows that the wearable medical devices developed so far have been designed for use on all parts of the human body, including the head, limbs, and torso. These devices can be classified into 4 application areas: (1) health and safety monitoring, (2) chronic disease management, (3) disease diagnosis and treatment, and (4) rehabilitation. However, the wearable medical device industry currently faces several important limitations that prevent further use of wearable technology in medical practice, such as difficulties in achieving user-friendly solutions, security and privacy concerns, the lack of industry standards, and various technical bottlenecks.                                         Conclusions               We predict that with the development of science and technology and the popularization of personalized health concepts, wearable devices will play a greater role in the field of health care and become better integrated into people’s daily lives. However, more research is needed to explore further applications of wearable devices in the medical field. We hope that this review can provide a useful reference for the development of wearable medical devices.},
   langid = {english},
   file = {/home/ro/Zotero/storage/4N6R9QKC/Lu et al. - 2020 - Wearable Health Devices in Health Care Narrative .pdf}
+}
+
+@article{malimbanDeepLearningbasedSegmentation2022,
+  title = {Deep Learning-Based Segmentation of the Thorax in Mouse Micro-{{CT}} Scans},
+  author = {Malimban, Justin and Lathouwers, Danny and Qian, Haibin and Verhaegen, Frank and Wiedemann, Julia and Brandenburg, Sytze and Staring, Marius},
+  date = {2022-02-02},
+  journaltitle = {Scientific Reports},
+  shortjournal = {Sci Rep},
+  volume = {12},
+  number = {1},
+  pages = {1822},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-022-05868-7},
+  url = {https://www.nature.com/articles/s41598-022-05868-7},
+  urldate = {2024-02-08},
+  abstract = {Abstract                            For image-guided small animal irradiations, the whole workflow of imaging, organ contouring, irradiation planning, and delivery is typically performed in a single session requiring continuous administration of anaesthetic agents. Automating contouring leads to a faster workflow, which limits exposure to anaesthesia and thereby, reducing its impact on experimental results and on animal wellbeing. Here, we trained the 2D and 3D U-Net architectures of no-new-Net (nnU-Net) for autocontouring of the thorax in mouse micro-CT images. We trained the models only on native CTs and evaluated their performance using an independent testing dataset (i.e., native CTs not included in the training and validation). Unlike previous studies, we also tested the model performance on an external dataset (i.e., contrast-enhanced CTs) to see how well they predict on CTs completely different from what they were trained on. We also assessed the interobserver variability using the generalized conformity index (                                                   \$\$\textbackslash hbox \{CI\}\_\{\textbackslash mathrm\{gen\}\}\$\$                                                               CI                       gen                                                                                       ) among three observers, providing a stronger human baseline for evaluating automated contours than previous studies. Lastly, we showed the benefit on the contouring time compared to manual contouring. The results show that 3D models of nnU-Net achieve superior segmentation accuracy and are more robust to unseen data than 2D models. For all target organs, the mean surface distance (MSD) and the Hausdorff distance (95p HD) of the best performing model for this task (nnU-Net 3d\_fullres) are within 0.16 mm and 0.60 mm, respectively. These values are below the minimum required contouring accuracy of 1 mm for small animal irradiations, and improve significantly upon state-of-the-art 2D U-Net-based AIMOS method. Moreover, the conformity indices of the 3d\_fullres model also compare favourably to the interobserver variability for all target organs, whereas the 2D models perform poorly in this regard. Importantly, the 3d\_fullres model offers 98\% reduction in contouring time.},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/VQUQDVPP/Malimban et al. - 2022 - Deep learning-based segmentation of the thorax in .pdf}
 }
 
 @article{mandoliniComparisonThree3D2022,
@@ -1285,6 +1335,24 @@
   urldate = {2023-09-23},
   abstract = {Abstract                            Objective               . The Dutch proton robustness evaluation protocol prescribes the dose of the clinical target volume (CTV) to the voxel-wise minimum (VWmin) dose of 28 scenarios. This results in a consistent but conservative near-minimum CTV dose (D               98\%,CTV               ). In this study, we analyzed (i) the correlation between VWmin/voxel-wise maximum (VWmax) metrics and actually delivered dose to the CTV and organs at risk (OARs) under the impact of treatment errors, and (ii) the performance of the protocol before and after its calibration with adequate prescription-dose levels.               Approach               . Twenty-one neuro-oncological patients were included. Polynomial chaos expansion was applied to perform a probabilistic robustness evaluation using 100,000 complete fractionated treatments per patient. Patient-specific scenario distributions of clinically relevant dosimetric parameters for the CTV and OARs were determined and compared to clinical VWmin and VWmax dose metrics for different scenario subsets used in the robustness evaluation protocol.               Main results               . The inclusion of more geometrical scenarios leads to a significant increase of the conservativism of the protocol in terms of clinical VWmin and VWmax values for the CTV and OARs. The protocol could be calibrated using VWmin dose evaluation levels of 93.0\%–92.3\%, depending on the scenario subset selected. Despite this calibration of the protocol, robustness recipes for proton therapy showed remaining differences and an increased sensitivity to geometrical random errors compared to photon-based margin recipes.               Significance               . The Dutch proton robustness evaluation protocol, combined with the photon-based margin recipe, could be calibrated with a VWmin evaluation dose level of 92.5\%. However, it shows limitations in predicting robustness in dose, especially for the near-maximum dose metrics to OARs. Consistent robustness recipes could improve proton treatment planning to calibrate residual differences from photon-based assumptions.},
   file = {/home/ro/Zotero/storage/ZLFCGGA3/Rojo-Santiago et al. - 2023 - Robustness analysis of CTV and OAR dose in clinica.pdf}
+}
+
+@article{rosenhainPreclinicalMicrocomputedTomography2018,
+  title = {A Preclinical Micro-Computed Tomography Database Including {{3D}} Whole Body Organ Segmentations},
+  author = {Rosenhain, Stefanie and Magnuska, Zuzanna A. and Yamoah, Grace G. and Rawashdeh, Wa’el Al and Kiessling, Fabian and Gremse, Felix},
+  date = {2018-12-18},
+  journaltitle = {Scientific Data},
+  shortjournal = {Sci Data},
+  volume = {5},
+  number = {1},
+  pages = {180294},
+  issn = {2052-4463},
+  doi = {10.1038/sdata.2018.294},
+  url = {https://www.nature.com/articles/sdata2018294},
+  urldate = {2024-02-08},
+  abstract = {Abstract             The gold-standard of preclinical micro-computed tomography (μCT) data processing is still manual delineation of complete organs or regions by specialists. However, this method is time-consuming, error-prone, has limited reproducibility, and therefore is not suitable for large-scale data analysis. Unfortunately, robust and accurate automated whole body segmentation algorithms are still missing. In this publication, we introduce a database containing 225 murine 3D whole body μCT scans along with manual organ segmentation of most important organs including heart, liver, lung, trachea, spleen, kidneys, stomach, intestine, bladder, thigh muscle, bone, as well as subcutaneous tumors. The database includes native and contrast-enhanced, regarding spleen and liver, μCT data. All scans along with organ segmentation are freely accessible at the online repository Figshare. We encourage researchers to reuse the provided data to evaluate and improve methods and algorithms for accurate automated organ segmentation which may reduce manual segmentation effort, increase reproducibility, and even reduce the number of required laboratory animals by reducing a source of variability and having access to a reliable reference group.},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/HRV56RTS/Rosenhain et al. - 2018 - A preclinical micro-computed tomography database i.pdf}
 }
 
 @book{ruberteMorphologicalMousePhenotyping2017,
