--- a/includes/proposal/Content.tex
+++ b/includes/proposal/Content.tex
@@ -2,17 +2,21 @@
 \clearpage
 \section{Introduction}
 \begin{body}
-	Micro computed tomography ($\mu$CT) is a widely used modality in industry and research. For the latter, it enables the study of small structures in animals, for example rodents such as mice\cite{percianoInsight3DMicroCT2017}.
-	A common task while performing short-term or long-term studies with mice is the segmentation of the image data, as it is an important step for quantitative image analysis\cite{sheppardTechniquesHelicalScanning2014}. Segmentation can be defined as the process of separating various image components and extracting parts that are of interest for later analysis\cite{percianoInsight3DMicroCT2017}. A common task may be in-vivo bone analysis for the investigation and monitoring of progression of various bone pathologies. Analysis is performed by first segmenting the $\mu$CT volume and then extracting morphological features relevant for the study. Streamlining the segmentation process is therefore crucial for the analysis step\cite{korfiatisIndependentActiveContours2017}.
+  Micro computed tomography ($\mu$CT) is a widely used modality in industry and research. For the latter, it enables the study of small structures in animals, for example rodents such as mice\cite{percianoInsight3DMicroCT2017}.
+
+  A common task while performing short-term or long-term studies with mice is the segmentation of the image data, as it is an important step for quantitative image analysis\cite{sheppardTechniquesHelicalScanning2014}.
+  Segmentation can be defined as the process of separating various image components and extracting parts that are of interest for later analysis\cite{percianoInsight3DMicroCT2017}.
+  A common task may be in-vivo bone analysis for the investigation and monitoring of progression of various bone pathologies.
+  Analysis is performed by firstly segmenting the $\mu$CT volume. Secondly, the morphological features relevant for the study are extracted to be finally analyzed. Streamlining the segmentation process is therefore crucial for the analysis step\cite{percianoInsight3DMicroCT2017,korfiatisIndependentActiveContours2017}.
 	\newline
 	There exist a few free and open-source programs capable of segmenting $\mu$CT datasets.
-	The two actively maintained and well-known\cite{mandoliniComparisonThree3D2022,virziComprehensiveReview3D2020} software packages are:
+	Two actively maintained and well-known\cite{virziComprehensiveReview3D2020,mandoliniComparisonThree3D2022,virziComprehensiveReview3D2020} software packages are:
 	\begin{itemize}
 		\item \textsc{ITK-SNAP}\cite{yushkevichUserguided3DActive2006} available under the \texttt{GNU General Public License}\cite{licenseGnuGeneralPublic1989}
 		\item \textsc{3D Slicer}\cite{kikinis3DSlicerPlatform2014} available under a \texttt{BSD style license}\cite{gaudeulPublicProvisionPrivate2005}
 	\end{itemize}
 	Both provide the user with a plethora of segmentation algorithms which can be grouped into manual, semi-automatic and fully automatic. They provide several tools capable of complex segmentation workflows\cite{percianoInsight3DMicroCT2017}.
-	Accuracy and efficiency of the segmentation however strongly depend on user experience and the segmentation algorithm chosen\cite{mandoliniComparisonThree3D2022,aydinRELIABILITYREPRODUCIBILITYTIMEEFFICIENCY2020}. Despite this fact, there is a distinct lack of general recommendations, instructions or guides on how to efficiently segment $\mu$CT datasets.\\
+	Accuracy and efficiency of the segmentation however strongly depend on user experience and the segmentation algorithm chosen\cite{mandoliniComparisonThree3D2022,aydinRELIABILITYREPRODUCIBILITYTIMEEFFICIENCY2020,arguelloComparisonSegmentationTools2019}. Despite this fact, there is a distinct lack of general recommendations, instructions or guides on how to efficiently segment $\mu$CT datasets.\\
 	For example, searching for:
 	\begin{displayquote}
 		micro ct 'segmentation instructions'
@@ -27,19 +31,19 @@
 \clearpage
 \section{Problem Statement}
 \begin{body}
-	As mentioned above, \texttt{3D Slicer} and \texttt{ITK-SNAP} provide the user with a sizable amount of segmentation tools and the selection of the correct segmentation algorithm and workflow have a non-negligible influence on the segmentation quality as well as the time the user has to spend on it. Furthermore, segmenting large datasets, such as produced by a high resolution $\mu$CT scan results in large random-access memory (RAM) demands by the segmentation software.
+	As mentioned above, \texttt{3D Slicer} and \texttt{ITK-SNAP} provide the user with a sizable amount of segmentation tools. The selection of the correct segmentation algorithm and workflow have a non-negligible influence on the segmentation quality as well as the time the user has to spend on it\cite{liuSAMMSegmentAny2023}. Furthermore, segmenting large datasets, such as produced by a high resolution $\mu$CT scan results in large random-access memory (RAM) demands by the segmentation software\cite{smistadMedicalImageSegmentation2015}.
 	The 3D Slicer documentation states that the software will require approximately 10 times more memory than the loaded dataset \cite{slicercommunity3DSlicerImage2022,fedorov3DSlicerImage2012}.
-	The user has therefore optimize the segmentation workflow if the software is to be used on a computer with limited amounts of RAM.
-	Therefore, we hypothesize that users of \texttt{3D Slicer} will benefit from a streamlined segmentation guide, and it will improve segmentation quality as well as workflow efficiency.
+	The user therefore has to optimize the segmentation workflow if the software is to be used on a computer with limited amounts of RAM.
+	Therefore, the author hypothesizes that users of \texttt{3D Slicer} will benefit from a streamlined segmentation guide, and it will improve segmentation quality as well as workflow efficiency.
 \end{body}
 \clearpage
 \section{Objectives and Aims}
 \begin{body}
 	The master thesis is based on the following hypothesis:
 	\begin{itemize}
-		\item A segmentation guide will improve segmentation accuracy for inexperienced users
+		\item A segmentation guide will improve segmentation accuracy for inexperienced users.
 	\end{itemize}
-	Similar to Guindon et al.\cite{diceMeasuresAmountEcologic1945}, we plan to evaluate segmentation accuracy by comparing the results of the test candidates with the author's ground truth segmentation. Evaluation will be done by calculating the Dice coefficient\cite{diceMeasuresAmountEcologic1945} or Hausdorff distance\cite{birsanOneHundredYears2006} of the two segmentation results and correlating the error with literature\cite{kenneyHighthroughputSemiautomatedBone2022,malimbanDeepLearningbasedSegmentation2022}. The resulting ground truth segmentations can then be used in later works. For instance as a training dataset for an deep-learning based approach as Rosenhain et al. point out:
+	Similar to Guindon et al.\cite{diceMeasuresAmountEcologic1945}, the author plans to evaluate segmentation accuracy by comparing the results of the test candidates with the author's ground truth segmentation\cite{ruberteMorphologicalMousePhenotyping2017}. Evaluation will be done by calculating the Dice coefficient\cite{diceMeasuresAmountEcologic1945} or Hausdorff distance\cite{birsanOneHundredYears2006} of the two segmentation results and correlating the error with literature\cite{kenneyHighthroughputSemiautomatedBone2022,malimbanDeepLearningbasedSegmentation2022,khmelinskiiSegmentationVisualAnalysis2012a}. The resulting ground truth segmentations can then be used in later works. For instance as a training dataset for a deep-learning based approach as Rosenhain et al. point out:
 	\begin{quotation}
 		\noindent
 		''The gold-standard of preclinical micro-computed tomography ($\mu$CT) data processing is still manual delineation of complete organs or regions by specialists.''\cite{rosenhainPreclinicalMicrocomputedTomography2018}
@@ -79,8 +83,8 @@
 \begin{body}
 	As creating as general segmentation guide for $\mu$CT scans of mice and educating the user on every possible segmentation method for every tissue is far beyond the capabilities of this master thesis, the outcome should be twofold:
 	\begin{enumerate}
-		\item Educating users of segmentation software like 3D Slicer on the capabilities and correct usage of their tools
-		\item Enabling further research on the topic of $\mu$CT segmentation for different tissues and segmentation methods and algorithms
+		\item Educating users of segmentation software like 3D Slicer on the capabilities and correct usage of their tools.
+		\item Enabling further research on the topic of $\mu$CT segmentation for different tissues and segmentation methods and algorithms.
 	\end{enumerate}
 \end{body}
 
