--- a/includes/proposal/masterthesis-vars.sty
+++ b/includes/proposal/masterthesis-vars.sty
@@ -13,6 +13,9 @@
 \newcommand{\thesisdate}{\today}
 \renewcommand{\contentsname}{Table of Contents}
 
+\newenvironment{body}{\fontfamily{Times New Roman}\selectfont}{\par}
+
+
 \newcommand{\tb}{TextBlob}
 \newcommand{\nb}{\ac{NB}}
 \newcommand{\me}{\ac{ME}}
