--- a/README.org
+++ b/README.org
@@ -25,7 +25,7 @@ Please see the corresponding files.
 * Roadmap
 | Step              | planned Date | actual Date |
 |-------------------+--------------+-------------|
-| Research Proposal |   18.02.2024 |             |
+| Research Proposal |   18.02.2024 |  12.02.2024 |
 | Experiments       |              |             |
 | Thesis            |              |             |
 | Presentation      |              |             |
