--- a/includes/presentation/02-chapter-background.tex
+++ b/includes/presentation/02-chapter-background.tex
@@ -8,7 +8,7 @@
     \begin{outline}
         \1 Reliable in previous studies \citep{Barbosa2010}
             \2 Public opinion \citep{Oconnor2010a,Patodkar2016a}
-            \2 Stock market prediction \citep{Bollen2011a,Mittal2012a,Nguyen2015a,Pagolu2016a,Zhang2011a}
+            \2 Stock market prediction \citep{Mittal2012a,Nguyen2015a,Pagolu2016a,Zhang2011a}
 
         \1 Short messages of up to 280 characters \citep{Rosen2017}
         \1 One topic is assumed due limited characters \citep{Pagolu2016a,Patodkar2016a}
