--- a/includes/thesis/part01-page2-declaration.tex
+++ b/includes/thesis/part01-page2-declaration.tex
@@ -3,11 +3,12 @@
 \vspace{150pt}
 
 \begin{center}
-	{\noindent\fontsize{18pt}{21.6pt}\color{header-blue}\textbf{DECLARATION OF INTEGRITY}}
+	{\noindent\fontsize{18pt}{21.6pt}\color{header-blue}\textbf{\sffamily DECLARATION OF INTEGRITY}}
 \end{center}
 
 \vspace{30pt}
 
+\begin{sffamily}
 \noindent
 I hereby affirm that this research work was written solely by me and that I have not previously submitted this work at another educational institution for the purpose of receiving an academic degree. In particular, contributions by other persons in this work have been appropriately cited and the data gathered through the methods described have been accurately reproduced.
 \\
@@ -23,5 +24,5 @@ Ich erkläre an Eides statt, dass diese Arbeit ausschließlich von mir selbst ve
 		        & Date        &                & Signature \\
 	\end{tabular}
 \end{center}
-
+\end{sffamily}
 \clearpage
