--- a/includes/thesis/part01-page7-dedication.tex
+++ b/includes/thesis/part01-page7-dedication.tex
@@ -1,1 +1,14 @@
-To mum and dad...
+%!TEX root = ../../thesis.tex
+
+\begin{sffamily}
+\begin{center}
+	{\noindent\fontsize{18pt}{21.6pt}\color{header-blue}\textbf{Acknowledgements}}
+\end{center}
+
+
+\noindent
+\lipsum[1]
+
+
+\end{sffamily}
+\clearpage
