--- a/includes/thesis/part02-chapter01-introduction.tex
+++ b/includes/thesis/part02-chapter01-introduction.tex
@@ -28,7 +28,7 @@ Finally, \cref{s:introduction-structureofthisthesis} gives an outlook of the str
 \section{Motivation}
 \label{s:introduction-motivation}
 
-Many studies have been published which try to predict the stock market movement \citep[see][]{Bollen2011a,Mittal2012a,Nguyen2015a,Pagolu2016a,Zhang2011a}.
+Many studies have been published which try to predict the stock market movement \citep[see][]{Mittal2012a,Nguyen2015a,Pagolu2016a,Zhang2011a}.
 The \ac{EMH} states that financial market movements depend on news, current events and product releases and all these factors will have significant impact on a company's stock value
 \citep{fama1965behavior}.
 Due to the fact that news and current events are unpredictable, stock market prices follow a random walk pattern and cannot be predicted with more than \SI{50}{\percent} accuracy
@@ -46,7 +46,6 @@ Therefore, this data can be used for marketing, social studies and as a measure 
 Most Twitter messages have a maximum length of 140 characters and represents the public opinion on a precise topic
 \citep{Pagolu2016a}.
 
-Combining these two research fields (namely \ac{EMH} and Twitter) should enable us to investigate whether stock prices can be predicted via public opinions on Twitter.
 
 \section{Research Goals}
 \label{s:introduction-researchgoals}
