--- a/includes/thesis/part02-chapter02-background.tex
+++ b/includes/thesis/part02-chapter02-background.tex
@@ -18,35 +18,28 @@ and thirdly, the market of social networks will be examined in \cref{s:backgroun
 \section{Stock Market Prediction} 
 \label{s:background-stockmarketprediction}
 
-\citet{Bollen2011a} noted that many researches assumed that the stock market is based on the random walk theory and the \ac{EMH}.
-First, the \ac{EMH} suggests that the price of a security is reflected by all information available \citep{fama1965behavior, schumaker2009textual}.
-Furthermore, the \ac{EMH} can be split into three forms: the Weak, the Semi-Strong and the Strong.
 
 \begin{itemize}
     %\itemsep0em
     \item
-        In Weak \ac{EMH} only historical information is incorporated in the current price \citep{schumaker2009textual}.
+        In Wea only historical information is incorporated in the current price \citep{schumaker2009textual}.
 
     \item
-        In Semi-Strong \ac{EMH} uses historical and also currently available public information in the current price \citep{schumaker2009textual}.
+        In Semi-Stronguses historical and also currently available public information in the current price \citep{schumaker2009textual}.
 
     \item
-        In Strong \ac{EMH} the Semi-Strong model is enhanced with currently available private information such as insider information in the share price \citep{schumaker2009textual}.
+        In Strong the Semi-Strong model is enhanced with currently available private information such as insider information in the share price \citep{schumaker2009textual}.
 \end{itemize}
 
 Therefore, the \ac{EMH} assumes that stock market prices are driven by new information such as news and will less depend on the current price or historical prices.
-As news are unpredictable the stock market prices will follow a random walk pattern \citep{Bollen2011a}.
 
-But \citeauthor{Bollen2011a} stated also that stock prices aren't following the random walk pattern completely and can therefore predicted in some way.
 They stated that information available online may act as early indicators for changes.
-This include the Google search queries which provide an early indicator for disease infections (see \url{https://www.google.org/flutrends/}) \citep{Bollen2011a}.
 
 These effects can be also applied to the stock markets: not just news influences the stock market but also the public opinion and mood.
 Previously large surveys have been conducted to gather the public mood of a representative sample.
 This was very time-consuming and expensive.
 But in the last ten years a significant progress has been made in sentiment tracking techniques.
 Therefore the sentiments can be extracted from news and blogs
-\citep{Bollen2011a}.
 
 \section{Option Mining} 
 \label{s:background-optionmining}
@@ -427,4 +420,3 @@ Twitter has become a valuable source of opinions, data and information for vario
 Messages on Twitter are called tweets and are limited in length (140 for tweets before \printdate{2017-11-07}; 280 characters since then, at least for English tweets \citep{Rosen2017}) and due to this fact users have to concentrate on a specific topic precisely.
 Therefore, Twitter is the perfect source of the public opinion as users discussing anything on Twitter \citep{Pagolu2016a, Patodkar2016a}.
 
-As a result the fields in which researches have used data from Twitter ranging from public opinions for politicans and polls (see \citealp{Oconnor2010a,Patodkar2016a}) to the stock market and the prediction of stock prices and other factors (see \citealp{Bollen2011a,Mittal2012a,Nguyen2015a,Pagolu2016a,Zhang2011a}).
