--- a/includes/thesis/masterthesis-definitions.sty
+++ b/includes/thesis/masterthesis-definitions.sty
@@ -19,8 +19,12 @@
 
 \graphicspath{{images/}}    %Direction where LaTeX will look for the images.
 
-\addbibresource{includes/shared-preamble-mainreferences.bib}  %Imports bibliography file
-\addbibresource{includes/shared-preamble-tweetreferences.bib} %Imports bibliography file
+
+%#+TODO: Remove
+%\addbibresource{includes/shared-preamble-mainreferences.bib}  %Imports bibliography file
+%\addbibresource{includes/shared-preamble-tweetreferences.bib} %Imports bibliography file
+\addbibresource{includes/medtec.bib}
+
 
 \newcommand{\tweet}[1]{%
 \begin{quote}
