--- a/includes/thesis/masterthesis-vars.sty
+++ b/includes/thesis/masterthesis-vars.sty
@@ -1,16 +1,16 @@
 \ProvidesPackage{masterthesis-vars}[2024/01/08 Master Thesis Variables]
 
-\title{Mouse Micro CT Segmentation}
+\title{Development and evaluation of a bone anatomy segmentation guide for micro-CT in mice}
 \author{Stefan Rohrbacher, BSc}
-\newcommand{\matriculationNumber}{00851488}
-\newcommand{\thesiskeywords}{Slicer, CT, Segmentation}
-\newcommand{\advisor}{Dr. Michael Rauter}
+\newcommand{\matriculationNumber}{01607307}
+\newcommand{\thesiskeywords}{3DSlicer, micro-CT, Segmentation}
+\newcommand{\advisor}{Dipl.-Ing. Michael Rauter}
 \newcommand{\study}{Master's Programme}
-\newcommand{\institutename}{Medicine}
+%%\newcommand{\institutename}{Medicine}
 \newcommand{\studyprogram}{MedTech}
 \newcommand{\place}{Wiener Neustadt}
 \newcommand{\thesissubject}{Master's Thesis}
-\newcommand{\thesisdate}{\printdate{2024-01-08}} %todo
+\newcommand{\thesisdate}{\today}
 \renewcommand{\contentsname}{Table of Contents}
 
 
