--- a/includes/thesis/part01-page1-titlepage.tex
+++ b/includes/thesis/part01-page1-titlepage.tex
@@ -6,10 +6,11 @@
 
   \includegraphics[width=6cm]{images/fhwn-logo.png}
 
+\begin{sffamily}
   \vspace{70pt}
   {\noindent \linespread{1.3} \color{header-blue} \Huge \textbf{\@title} \par }
   \vspace{5pt}
-  {\noindent\LARGE Master's Thesis \par}
+  {\noindent\Large Master's Thesis \par}
   \vspace{20pt}
 
   \hspace{-35mm}
@@ -21,7 +22,7 @@
   \tabto{2cm}Matriculation No.: \tabto{7cm}\textbf{\matriculationNumber} \\
   \vspace{15pt}
   \tabto{2cm}at \tabto{7cm}\textbf{\study}\\
-  \tabto{7cm}\textbf{\institutename}
+%%  \tabto{7cm}\textbf{\institutename}
   \tabto{7cm}\textbf{\studyprogram} \\
   \vspace{15pt}
   \tabto{2cm}Advisor: \tabto{7cm}\textbf{\advisor}
@@ -29,7 +30,7 @@
   \vfill
 
   \place, \thesisdate
-      
+\end{sffamily}
 \end{titlepage}
 \makeatother
 
